Added chapter on probability density functions

--- a/05_Modelling_Distributions.ipynb
+++ b/05_Modelling_Distributions.ipynb
@@ -644,7 +644,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "compstats.pearson_media_skewness(weights)"
+    "compstats.pearson_median_skewness(weights)"
    ]
   },
   {
