Added chapter on analytic methods

--- a/05_Modelling_Distributions.ipynb
+++ b/05_Modelling_Distributions.ipynb
@@ -736,7 +736,7 @@
    "outputs": [],
    "source": [
     "def normal_qq_plot(values: np.array, label: str, title: str):\n",
-    "    \"\"\"Generates a normal probability plot of birth weights.\n",
+    "    \"\"\"Generates a normal probability plot.\n",
     "\n",
     "    weights: sequence\n",
     "    \"\"\"\n",
