--- a/09_Hypothesis_Testing.ipynb
+++ b/09_Hypothesis_Testing.ipynb
@@ -52,6 +52,7 @@
     "sys.path.append('lib')\n",
     "\n",
     "import nsfg\n",
+    "import compstats\n",
     "from pmf import Pmf"
    ]
   },
@@ -907,15 +908,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "live.dropna(subset=['totalwgt_lb'], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "np.corrcoef(live.agepreg.values, live.totalwgt_lb.values)"
    ]
   },
@@ -944,7 +936,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cov(live.agepreg, live.totalwgt_lb)"
+    "compstats.cov(live.agepreg, live.totalwgt_lb)"
    ]
   },
   {
@@ -963,7 +955,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cor(live.agepreg, live.totalwgt_lb)"
+    "compstats.corr(live.agepreg, live.totalwgt_lb)"
    ]
   },
   {
@@ -974,7 +966,7 @@
    "source": [
     "# test stat\n",
     "def cor_test_stat(gp: GroupPair) -> np.float64:\n",
-    "    return abs(cor(gp.group1, gp.group2))\n",
+    "    return abs(compstats.corr(gp.group1, gp.group2))\n",
     "\n",
     "# null hypothesis\n",
     "def cor_sample(gp: GroupPair):\n",
@@ -994,7 +986,7 @@
     "    live.agepreg.values,\n",
     "    live.totalwgt_lb.values\n",
     ")\n",
-    "actual = cor(data.group1, data.group2)\n",
+    "actual = compstats.corr(data.group1, data.group2)\n",
     "test_stats = run_model(data, cor_test_stat, cor_sample, niters=10000)\n",
     "p_val = p_value(test_stats, actual)\n",
     "print(f'P value: {p_val:0.3f}, Maximum simulated correlation is {max(test_stats):0.3}')"
