--- a/08_Estimation.ipynb
+++ b/08_Estimation.ipynb
@@ -79,6 +79,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74ddde19-500d-4474-bd35-1e7b771d0dd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r2 = partial(np.round, decimals=2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "051d966c-7bd9-4b4c-95a2-205bec05dc20",
    "metadata": {},
@@ -546,28 +556,57 @@
     "@dataclass\n",
     "class ConfidenceEstimate:\n",
     "    \n",
+    "    # the hypothetical values of the parameters\n",
     "    mu: np.float64\n",
     "    sigma: np.float64\n",
-    "    # the estimates\n",
-    "    means: np.ndarray\n",
+    "    # our estimates of those parameters\n",
+    "    estimates: np.ndarray\n",
     "        \n",
-    "    def __str__(self):\n",
-    "        return f'mu: {self.mu}, sigma: {self.sigma}, estimates: {len(self.means)}, \\\n",
-    "        stderr: {self.stderr:.2f}, ci: [{self.ci[0]:.2f}, {self.ci[1]:.2f}]'\n",
+    "    def as_dataframe(self, prec=2) -> pd.DataFrame:\n",
+    "        _r = partial(np.round, decimals=prec)\n",
+    "        ci = _r(self.ci())\n",
+    "        values = [\n",
+    "            self.mu,\n",
+    "            _r(self.estimates.mean()),\n",
+    "            self.sigma,\n",
+    "            _r(self.stderr),\n",
+    "            ci[0],\n",
+    "            ci[1],\n",
+    "            _r(np.min(self.estimates)),\n",
+    "            _r(np.max(self.estimates))\n",
+    "        ]\n",
+    "        return pd.DataFrame(\n",
+    "            data=values,\n",
+    "            columns=[f'm={len(self.estimates)}'],\n",
+    "            index=[\n",
+    "                'mu_actual',\n",
+    "                'mu_est',\n",
+    "                'sigma',\n",
+    "                'std_err',\n",
+    "                'ci_5',\n",
+    "                'ci_95',\n",
+    "                'min_est',\n",
+    "                'max_est'\n",
+    "            ]\n",
+    "        )\n",
     "    \n",
     "    @property\n",
     "    def stderr(self) -> np.float64:\n",
     "        '''\n",
     "        Standard error (SE) is a measure of how far we expect the estimate to be off, on average\n",
+    "        \n",
+    "        The same as the standard deviation of our estimates\n",
     "        '''\n",
-    "        return rmse(self.means, self.mu)\n",
+    "        return rmse(self.estimates, self.mu)\n",
     "    \n",
-    "    @property\n",
-    "    def ci(self) -> Tuple[np.float64, np.float64]:\n",
+    "    def ci(self, limits=(5, 95)) -> Tuple[np.float64, np.float64]:\n",
     "        '''\n",
     "        A confidence interval (CI) is a range that includes a given fraction of the sampling distribution\n",
     "        '''\n",
-    "        return np.percentile(self.means, (5, 95))\n",
+    "        return np.percentile(self.estimates, limits)\n",
+    "    \n",
+    "    def percentile(self, x: int) -> float:\n",
+    "        return np.percentile(self.estimates, x)\n",
     "        \n",
     "        \n",
     "def simulate_sample(mu: np.float64, sigma: np.float64, n: int=9, m: int=1000) -> ConfidenceEstimate:\n",
@@ -579,7 +618,7 @@
     "    :param n: the size of each sample\n",
     "    :param m: the number of experiments\n",
     "    '''\n",
-    "    norm_dist = stats.norm(mu, sigma)\n",
+    "    norm_dist = stats.norm(loc=mu, scale=sigma)\n",
     "    # compute the means of m samples of n items\n",
     "    means = np.array([\n",
     "        norm_dist.rvs(n).mean() for _ in range(m)\n",
@@ -594,8 +633,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "estimate = simulate_sample(90, 7.5)\n",
-    "print(estimate)"
+    "estimate = simulate_sample(90, 7.5, n=9, m=1000)\n",
+    "estimate.as_dataframe()"
    ]
   },
   {
@@ -603,7 +642,23 @@
    "id": "1a856f50-8c12-4342-9200-9cfc7b803540",
    "metadata": {},
    "source": [
-    "&mu; and &sigma; are the hypothetical values of the parameters. __n__ is the sample size, the number of gorillas we measured. __m__ is the number of times we run the simulation."
+    "&mu; and &sigma; are the hypothetical values of the parameters. __n__ is the sample size, the number of gorillas we measured. __m__ is the number of times we run the simulation.\n",
+    "\n",
+    "In each iteration, we choose n values from a normal distribution with the given parameters, and compute the sample mean, $\\bar{x}$. We run 1000 simulations and then compute the distribution, cdf, of the estimates. The result is shown below. This distribution is called the sampling distribution of the estimator. It shows how much the estimates would vary if we ran the experiment over and over.\n",
+    "\n",
+    "The mean of the sampling distribution is pretty close to the hypothetical value of &mu;, which means that the experiment yields the right answer, on average. After 1000 tries, the lowest result is 82 kg, and the highest is 98 kg. This range suggests that the estimate might be off by as much as 8 kg.\n",
+    "\n",
+    "There are two common ways to summarize the sampling distribution:\n",
+    "\n",
+    "- Standard error (SE) is a measure of how far we expect the estimate to be off, on average. For each simulated experiment, we compute the error, $\\bar{x}-\\mu$, and then compute the root mean squared error (RMSE). In this example, it is roughly 2.5 kg.\n",
+    "- A confidence interval (CI) is a range that includes a given fraction of the sampling distribution. For example, the 90% confidence interval is the range from the 5th to the 95th percentile. In this example, the 90% CI is (86, 94) kg.\n",
+    "\n",
+    "Standard errors and confidence intervals are the source of much confusion:\n",
+    "\n",
+    "- People often confuse standard error and standard deviation. Remember that standard deviation describes variability in a measured quantity; in this example, the standard deviation of gorilla weight is 7.5 kg. Standard error describes variability in an estimate. In this example, the standard error of the mean, based on a sample of 9 measurements, is 2.5 kg. One way to remember the difference is that, as sample size increases, standard error gets smaller; standard deviation does not.\n",
+    "- People often think that there is a 90% probability that the actual parameter, &mu;, falls in the 90% confidence interval. Sadly, that is not true. If you want to make a claim like that, you have to use Bayesian methods. The sampling distribution answers a different question: it gives you a sense of how reliable an estimate is by telling you how much it would vary if you ran the experiment again.\n",
+    "\n",
+    "It is important to remember that confidence intervals and standard errors only quantify sampling error; that is, error due to measuring only part of the population. The sampling distribution does not account for other sources of error, notably sampling bias and measurement error, which are the topics of the next section."
    ]
   },
   {
@@ -622,10 +677,14 @@
    "outputs": [],
    "source": [
     "p = sns.ecdfplot(\n",
-    "    x = estimate.means\n",
+    "    x = estimate.estimates\n",
     ")\n",
-    "p.fill_between(estimate.ci, (1, 1), facecolor='pink', alpha=0.3);\n",
-    "p.axvline(x=estimate.mu, linestyle='--');\n",
+    "c_intervals = (5, 95)\n",
+    "p.fill_between(estimate.ci(c_intervals), (1, 1), facecolor='pink', alpha=0.3);\n",
+    "p.axvline(x=estimate.mu, linestyle='--', color='darkred', label=f'$\\mu={estimate.mu}$');\n",
+    "for x in c_intervals:\n",
+    "    pval = estimate.percentile(x)\n",
+    "    p.axvline(x=pval, linestyle='--', label=f'ci_{x}')\n",
     "p.set(\n",
     "    xlim=(80, 100),\n",
     "    xlabel = 'Sample means'\n",
