Added chapter on survival analysis

--- a/workshops/Reading_Stata_Dictionaries.ipynb
+++ b/workshops/Reading_Stata_Dictionaries.ipynb
@@ -29,6 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd"
    ]
   },
@@ -606,13 +607,122 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e557bf38-29a3-4914-9b60-3f10306c50b7",
+   "metadata": {},
+   "source": [
+    "We have to clean up a few variables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "231383b8-dc0f-4348-b707-2ba558e1445c",
+   "id": "574c5964-473c-46ad-8863-453a0c5452b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.head()"
+    "df.cmmarrhx.value_counts().sort_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0fd23b1-15e0-436b-9d8b-eb55984000da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_fem_response_data(df:  pd.DataFrame) -> pd.DataFrame:\n",
+    "    null_values = [9997, 9998, 9999]\n",
+    "    for col in ('cmmarrhx', 'cmdivorcx',):\n",
+    "        df[col].replace(null_values, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46af2723-6952-4c11-bb29-827d97858bef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_fem_response_data(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90b379ae-05db-48a6-90dd-373ca403eb44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.cmdivorcx.isnull().astype(int).value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8c6d247-5960-4692-b40a-7195983b2069",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nrows, ncols = df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79b8b932-6b41-44e7-a89e-30dd18d8af08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "na_proportions = df.apply(lambda col: col.isna().sum()/nrows).sort_values()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a696091-05a2-4b1e-95ea-6fb13bf0714c",
+   "metadata": {},
+   "source": [
+    "columns with less than 10% data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c55f77ba-3b1b-4348-85a0-fc88b5e4dbb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(na_counts[na_counts > 0.90])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cb6ee1b-7702-4778-a28c-52ceb16ff78e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols_to_drop = na_counts[na_counts > 0.9].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1188a993-2c33-40f4-99f9-345015d4f52c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols_to_drop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16e26537-d90b-4e03-83bd-a7752574073b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(cols_to_drop, axis=1)"
    ]
   },
   {
